--- a/style.scss
+++ b/style.scss
@@ -35,8 +35,10 @@ h1, h2, h3, h4, h5, h6 {
   color: $darkerGray;
   font-weight: bold;
 
-  line-height: 1.7;
-  margin: 1em 0 15px;
+//  line-height: 1.7;
+//  margin: 1em 0 15px;
+  line-height: 1;
+  margin: 0;
   padding: 0;
 
   @include mobile {
