--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page">
 
-  <h1 style="line-height:2;">{{ page.title }}</h1>
+  <h1 style="margin:1em 0 10px">{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
