modified margin of '.site-name'

--- a/style.scss
+++ b/style.scss
@@ -193,7 +193,7 @@ img {
 }
 
 .site-name {
-  margin: 0;
+  margin: 5px 0 10px;
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
