--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="post">
-  <h1 style="font-size:50px;">{{ page.title }}</h1>
+  <h1>{{ page.title }}</h1>
   <br/><br/>
   
   <div class="entry">
